[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Grua/Pinza_Hand/Pinza_Core.png" type="Texture" id=1]
[ext_resource path="res://Assets/Grua/Pinza_Hand/Pinza_R.png" type="Texture" id=2]
[ext_resource path="res://Assets/Grua/Pinza_Hand/Pinza_L.png" type="Texture" id=3]
[ext_resource path="res://Clases/Entidades/GarraGrua.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 27.0

[node name="GarraGrua" type="KinematicBody2D"]
position = Vector2( 114, 51 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -5 )
region_enabled = true
region_rect = Rect2( 56, 44, 29, 24 )

[node name="LadoDer" type="KinematicBody2D" parent="."]
rotation = -0.0872665

[node name="Sprite" type="Sprite" parent="LadoDer"]
z_index = -1
texture = ExtResource( 2 )
offset = Vector2( 12.5, 16 )
region_enabled = true
region_rect = Rect2( 71, 61, 24, 31 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="LadoDer"]
scale = Vector2( -1, 1 )
build_mode = 1
polygon = PoolVector2Array( -1, 29, -11, 19, -7, 4, -14, -1, -24, 7, -24, 22, -15, 31 )

[node name="LadoIzq" type="KinematicBody2D" parent="."]
rotation = 0.0872665

[node name="Sprite" type="Sprite" parent="LadoIzq"]
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( -12.5, 16 )
region_enabled = true
region_rect = Rect2( 46, 61, 24, 31 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LadoIzq"]
build_mode = 1
polygon = PoolVector2Array( -1, 29, -11, 19, -7, 4, -14, -1, -24, 7, -24, 22, -15, 31 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
